# meteroid

./: .dockerignore  .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  buf.work.yaml  clippy.toml  diesel.toml  facturx.xml  rust-toolchain.toml  sample_customers.csv  sample_events.csv  sample_subscriptions.csv
crates/common-build-info/: Cargo.toml  build.rs
crates/common-build-info/src/: lib.rs
crates/common-config/: Cargo.toml
crates/common-config/src/: analytics.rs  auth.rs  common.rs  idempotency.rs  lib.rs  telemetry.rs  tracking.rs
crates/common-domain/: Cargo.toml
crates/common-domain/src/: auth.rs  country.rs  identifiers.rs  lib.rs
crates/common-domain/src/ids/: alias_or.rs  macros.rs  mod.rs
crates/common-domain/src/pgmq/: mod.rs
crates/common-eventbus/: Cargo.toml
crates/common-eventbus/src/: lib.rs
crates/common-grpc/: Cargo.toml  build.rs
crates/common-grpc-error-as-tonic-macros-impl/: Cargo.toml
crates/common-grpc-error-as-tonic-macros-impl/src/: lib.rs
crates/common-grpc-source-details-macros-impl/: Cargo.toml
crates/common-grpc-source-details-macros-impl/src/: lib.rs
crates/common-grpc/src/: code.rs  lib.rs
crates/common-grpc/src/middleware/: mod.rs
crates/common-logging/: Cargo.toml
crates/common-logging/src/: init.rs  init_metrics.rs  lib.rs  logging.rs  otel.rs  telemetry.rs  unwrapper.rs
crates/common-repository/: Cargo.toml
crates/common-repository/src/: lib.rs
crates/common-utils/: Cargo.toml
crates/common-utils/src/: date.rs  decimal.rs  decimals.rs  error_stack_conv.rs  integers.rs  lib.rs  misc.rs  rng.rs  timed.rs  uuid.rs
crates/distributed-lock/: Cargo.toml
crates/distributed-lock/src/: errors.rs  lib.rs
crates/distributed-lock/src/locks/: mod.rs  postgres_lock.rs
crates/kafka/: Cargo.toml
crates/kafka/src/: config.rs  consumer.rs  domain.rs  lib.rs  processor.rs  producer.rs
extra/diesel_models/: Cargo.toml  README.md  diesel.toml
extra/diesel_models/src/: api_tokens.rs  bi.rs  billable_metrics.rs  configs.rs  credit_notes.rs  customers.rs  enums.rs  errors.rs  fang.rs  invoices.rs  lib.rs  organization_members.rs  organizations.rs  plan_versions.rs  plans.rs  price_components.rs  product_families.rs  products.rs  schedules.rs  schema.rs  schema_backup.rs  slot_transactions.rs  subscription_components.rs  subscriptions.rs  tenants.rs  users.rs  webhooks.rs
extra/diesel_models/src/extend/: pagination.rs
extra/diesel_models/src/query/: api_tokens.rs  billable_metrics.rs  configs.rs  customers.rs  invoices.rs  mod.rs  organization_members.rs  organizations.rs  plan_versions.rs  plans.rs  price_components.rs  product_families.rs  products.rs  schedules.rs  slot_transactions.rs  subscriptions.rs  tenants.rs  users.rs
extra/generator/: Cargo.toml  README.md  seed.yaml
extra/generator/src/: domain.rs  generate.rs  main.rs  serde_macro.rs
extra/meteroid_store/: Cargo.toml
extra/meteroid_store/src/: errors.rs  lib.rs  store.rs
extra/meteroid_store/src/domain/: customers.rs  invoices.rs  misc.rs  mod.rs  plans.rs  product_families.rs  schedules.rs  subscription_components.rs  subscriptions.rs  tenants.rs
extra/meteroid_store/src/repositories/: customers.rs  invoices.rs  mod.rs  plans.rs  product_families.rs  subscriptions.rs  tenants.rs
modules/adapters/openstack/: Cargo.toml  README.md
modules/adapters/openstack/src/: config.rs  error.rs  events.rs  main.rs  sink.rs  source.rs
modules/adapters/slurm-collector/: Cargo.toml  README.md
modules/adapters/slurm-collector/src/: main.rs  model.rs
modules/metering/: Cargo.toml  Dockerfile  README.md
modules/metering/crates/metering-grpc/: Cargo.toml  build.rs
modules/metering/migrations/refinery/: V1__init.rs  V1__initial.rs  V2__preprocessed_events.rs  V3__kafka_sasl_auth.rs  V3__reset_replicated_and_kafka_auth.rs  V4__remove_preprocessed_events.rs  V5__migrate_to_cluster.rs  V6__remove_kafka_engine.rs  V7__migrate_ids_to_uuid.rs  V8__drop_old_raw_events.rs
modules/metering/proto/: buf.yaml  events.proto  events_internal.proto  meters.proto  models.proto  queries.proto
modules/metering/src/: auth.rs  cache.rs  config.rs  domain.rs  error.rs  lib.rs  migrate.rs  migrations.rs  server.rs  utils.rs
modules/metering/src/connectors/: errors.rs  json.rs  mod.rs
modules/metering/src/ingest/: common.rs  consumer.rs  domain.rs  errors.rs  internal_service.rs  metrics.rs  mod.rs  service.rs
modules/metering/src/meters/: mod.rs  service.rs
modules/metering/src/preprocessor/: handler.rs  mod.rs
modules/metering/src/query/: mod.rs  service.rs
modules/meteroid/: Cargo.toml  Dockerfile  README.md  api.Dockerfile  buf.gen.yaml  build.rs  scheduler.Dockerfile
modules/meteroid/avro/: address.avsc  customer.avsc  shipping_address.avsc
modules/meteroid/crates/diesel-models/: Cargo.toml  diesel.toml
modules/meteroid/crates/hubspot-client/: Cargo.toml
modules/meteroid/crates/meteroid-grpc/: Cargo.toml  build.rs  clippy.toml
modules/meteroid/crates/meteroid-invoicing/: Cargo.toml  README.md  build.rs  package.json  tailwind.config.js
modules/meteroid/crates/meteroid-invoicing-typst/: Cargo.toml  build.rs
modules/meteroid/crates/meteroid-mailer/: Cargo.toml
modules/meteroid/crates/meteroid-middleware/: Cargo.toml
modules/meteroid/crates/meteroid-migrations/: .gitignore  Cargo.toml  README.md
modules/meteroid/crates/meteroid-oauth/: Cargo.toml
modules/meteroid/crates/meteroid-repository/: Cargo.toml  README.md  build.rs
modules/meteroid/crates/meteroid-seeder/: Cargo.toml
modules/meteroid/gateway/: Readme.md  date.pb.go  go.mod  go.sum  models.pb.go  pagination.pb.go  shared.pb.go  subscriptions.pb.go  subscriptions.pb.gw.go  subscriptions_grpc.pb.go
modules/meteroid/openapiv2/: meteroid-api.swagger.json
modules/meteroid/proto/: buf.yaml
modules/meteroid/src/: config.rs  constants.rs  crypt.rs  datetime.rs  db.rs  encoding.rs  errors.rs  eventbus.rs  lib.rs  migrations.rs  models.rs  singletons.rs  svix.rs  webhook.rs  webhook_api.rs  webhook_in_api.rs
(+2057 files in other folders)
