[package]
name = "common-config"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envconfig.workspace = true
humantime.workspace = true
secrecy.workspace = true

