[package]
name = "common-domain"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
secrecy = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }
