[package]
name = "common-domain"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v7"] }
base62 = { workspace = true }
diesel = { workspace = true, features = ["uuid", "postgres_backend"], optional = true }
diesel-derive-newtype = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
diesel = ["dep:diesel", "dep:diesel-derive-newtype"]
utoipa = ["dep:utoipa"]
default = []

