[package]
name = "common-grpc-error-as-tonic-macros-impl"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
common-grpc-error-as-tonic-macros.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
