[package]
name = "common-logging"
version = "0.1.0"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-config.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["logs"] }
init-tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
