[package]
name = "common-repository"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
tokio-postgres = { workspace = true, features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
] }
tokio = { workspace = true, features = ["full"] }
deadpool-postgres.workspace = true
tokio-postgres-rustls.workspace = true
rustls = { workspace = true, features = ["ring"] }
ring.workspace = true

