[package]
name = "common-utils"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { workspace = true, features = ["v4"] }
uuid7 = { workspace = true }
thiserror = { workspace = true, optional = true }
error-stack = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
pin-project = { workspace = true }

[features]
error-stack-conv = ["dep:error-stack", "dep:anyhow", "dep:thiserror"]
