[package]
name = "common-utils"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true, optional = true }
error-stack = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
pin-project = { workspace = true }
chrono = { workspace = true }

[features]
error-stack-conv = ["dep:error-stack", "dep:anyhow", "dep:thiserror"]
decimal = ["dep:rust_decimal"]
