[package]
name = "kafka"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-domain = { path = "../common-domain" }
envconfig = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
log = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
