[package]
name = "meteroid-generator"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dotenvy.workspace = true
chrono = { workspace = true, features = ["clock"] }
common-grpc = { workspace = true, features = ["client"] }
log.workspace = true
serde.workspace = true
shellexpand.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tonic.workspace = true
uuid.workspace = true
metering-grpc = { workspace = true, features = ["client"] }
common-logging.workspace = true
fastrand.workspace = true
serde_yaml.workspace = true
